--- a/index.html
+++ b/index.html
@@ -12,17 +12,41 @@
  <body>
     <h1>DAWID DĘBIEC</h1>
     <section>
-        <div><h3>About Me</h3></div>
-        <p>Hi, my Name is Dawid, Nice to meet You. Below You can check out my Projects, enjoy!</p>
+        <div class="section-title red"><h3>About Me</h3></div>
+        <p>Hi, my Name is Dawid, nice to meet You! Below You can check out my Projects, enjoy!</p>
+    </section>
+    
+    <div class="grid2">
+        <section>
+            <div class="section-title"><h3>Projects</h3></div>
+            <div class="grid3">
+                <a  target="_blank" rel="noopener noreferrer external" href="https://spotthelist.tk"><div class="tiles red" id="spotTheList"><div><h3>Spot The List</h3><p>React.js</p></div></div></a>
+                <a  target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/Expresso"><div class="tiles light" id="expresso"><div><h3>Expresso</h3><p>GitHub</p></div></div></a>
+                <a  target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/bossMachine"><div class="tiles red" id="bossMachine"><div><h3>Boss Machine</h3><p>GitHub</p></div></div></a>
+                <a  target="_blank" rel="noopener noreferrer external" href="https://flamboyant-goldberg-bbefb7.netlify.app"><div class="tiles light" id="chessClubHomepage"><div><h3>Chess Club Homepage</h3><p>CSS/HTML</p></div></div></a>
+                <a  target="_blank" rel="noopener noreferrer external" href="https://orangehomepage.tk"><div class="tiles orange" id="orangeHomepage"><div><h3>Orange Homepage</h3><p>CSS/HTML</p></div></div></a>
+            </div>
+        </section>
+        <section>
+            <div class="section-title red"><h3>Courses</h3></div>
+            <a target="_blank" rel="noopener noreferrer external" href="./resources/codecademy.pdf"><div class="tiles light" id="frontEnd"><div><h3>Front End Engineer Career Path on Codecademy</h3><p>350 Hours to complete</p></div></div></a>
+        </section>
+    </div>
+    <section>
+        <div class="section-title"><h3>Story Time</h3></div>
+        <p>You might be wondering why I want to be a Front End Engineer? Answear is kinda simple, 
+            I'm good at learning and this area is evolving so freakin fast.. . 
+            By the way my current job is pretty boring. I would love to meet someone who will belive in me. 
+            I'm currently learning on codecademy and I have some experience with Graphic Design <br>
+            (3 years on WSE in Kraków in this field). I feel that I need more experience but I'm eager to learn as I mentioned before.</p>
     </section>
     <section>
-        <div><h3>Projects</h3></div>
-    </section>
-    <section>
-        <div><h3>Courses</h3></div>
-    </section>
-    <section>
-        <div><h3>Contact</h3></div>
+        <div class="section-title red"><h3>Contact</h3></div>
+        <div class="grid3">
+            <a href="mailto:dawiddebiecx@gmail.com"><div class="tiles light"><div><h3>E-mail</h3><p>dawiddebiecx@gmail.com</p></div></div></a>
+            <a href="https://www.linkedin.com/in/dawid-debiec/"><div class="tiles light"><h3>LinkedIn</h3></div></a>
+            <a href="https://github.com/Dawidx3p"><div class="tiles light"><h3>GitHub</h3></div></a>
+        </div>
     </section>
  </body>
 </html>
