--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             (3 years on WSE in Kraków in this field). I feel that I need more experience but I'm eager to learn as I mentioned before.</p>
     </section>
     <section>
-        <div class="section-title red"><h3>Contact</h3></div>
+        <div class="section-title aquaDark"><h3>Contact</h3></div>
         <div class="grid3">
-            <a href="mailto:dawiddebiecx@gmail.com"><div class="tiles light"><div><h3>E-mail</h3><p>dawiddebiecx@gmail.com</p></div></div></a>
-            <a href="https://www.linkedin.com/in/dawid-debiec/"><div class="tiles light"><h3>LinkedIn</h3></div></a>
-            <a href="https://github.com/Dawidx3p"><div class="tiles light"><h3>GitHub</h3></div></a>
+            <a href="mailto:dawiddebiecx@gmail.com"><div class="tiles aqua"><div><h3>E-mail</h3><p>dawiddebiecx@gmail.com</p></div></div></a>
+            <a href="https://www.linkedin.com/in/dawid-debiec/"><div class="tiles aqua"><h3>LinkedIn</h3></div></a>
+            <a href="https://github.com/Dawidx3p"><div class="tiles aqua"><h3>GitHub</h3></div></a>
         </div>
     </section>
  </body>
