--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <section>
             <div class="section-title"><h3>Projects</h3></div>
             <div class="grid3">
+                <a  target="_blank" rel="noopener noreferrer external" href="https://filmxteka.tk"><div class="tiles light" id="filmxteka"><div><h3>Filmxteka</h3><p>React.js</p></div></div></a>
                 <a  target="_blank" rel="noopener noreferrer external" href="https://spotthelist.tk"><div class="tiles red" id="spotTheList"><div><h3>Spot The List</h3><p>React.js</p></div></div></a>
                 <a  target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/Expresso"><div class="tiles light" id="expresso"><div><h3>Expresso</h3><p>GitHub</p></div></div></a>
                 <a  target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/bossMachine"><div class="tiles red" id="bossMachine"><div><h3>Boss Machine</h3><p>GitHub</p></div></div></a>
