new look of the page

--- a/index.html
+++ b/index.html
@@ -7,47 +7,64 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Roboto&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet" />
-    <title>Dawid Dębiec Portfolio</title>
+    <title>Portfolio Dawid Dębiec</title>
  </head>
  <body>
-    <h1>DAWID DĘBIEC</h1>
-    <section>
-        <div class="section-title red"><h3>About Me</h3></div>
-        <p>Hi, my Name is Dawid, nice to meet You! Below You can check out my Projects, enjoy!</p>
-    </section>
-    
+    <h1 class="color-theme-1">DAWID DĘBIEC</h1>
     <div class="grid2">
-        <section>
-            <div class="section-title"><h3>Projects</h3></div>
-            <div class="grid3">
-                <a  target="_blank" rel="noopener noreferrer external" href="https://filmxteka.tk"><div class="tiles light" id="filmxteka"><div><h3>Filmxteka</h3><p>React.js</p></div></div></a>
-                <a  target="_blank" rel="noopener noreferrer external" href="https://spotthelist.tk"><div class="tiles red" id="spotTheList"><div><h3>Spot The List</h3><p>React.js</p></div></div></a>
-                <a  target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/Expresso"><div class="tiles light" id="expresso"><div><h3>Expresso</h3><p>GitHub</p></div></div></a>
-                <a  target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/bossMachine"><div class="tiles red" id="bossMachine"><div><h3>Boss Machine</h3><p>GitHub</p></div></div></a>
-                <a  target="_blank" rel="noopener noreferrer external" href="https://flamboyant-goldberg-bbefb7.netlify.app"><div class="tiles light" id="chessClubHomepage"><div><h3>Chess Club Homepage</h3><p>CSS/HTML</p></div></div></a>
-                <a  target="_blank" rel="noopener noreferrer external" href="https://orangehomepage.tk"><div class="tiles orange" id="orangeHomepage"><div><h3>Orange Homepage</h3><p>CSS/HTML</p></div></div></a>
+        <div>
+            <section class="small dark shadow-left">
+                <h2>Hello!</h2>
+                <p>Nice to meet You! Below You can check out my Projects, enjoy!</p>
+            </section>
+            <section id="projects" class="small light shadow-left">
+                <h2>Projects</h2>
+                <a target="_blank" rel="noopener noreferrer external" href="https://filmxteka.tk">Filmxteka (React.js)</a>
+                <a target="_blank" rel="noopener noreferrer external" href="https://spotthelist.tk">Spot The List (React.js)</a>
+                <a target="_blank" rel="noopener noreferrer external" href="https://flamboyant-goldberg-bbefb7.netlify.app">Chess Club Homepage (CSS/HTML)</a>
+                <a target="_blank" rel="noopener noreferrer external" href="https://orangehomepage.tk">Orange Homepage (CSS/HTML)</a>
+                <a target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p">More on Github</a>
+            </section>
+        </div>
+        <section class="light long shadow-right">
+            <h2>Courses & Schools</h2>
+            <h3>Front End Engineer Career Path on Codecademy</h3>
+            <p>350 hour course, 71 Projects, 121 Lessons</p>
+            <br>
+            <h3>Graphic Design & Multimedia</h3>
+            <p>Undergraduate studies, that prepare for work in the broadly 
+                understood field of applied graphics, as well as for master’s 
+                studies. The core courses, which are compulsory for everyone, 
+                cover the essential theoretical knowledge and practical skills
+                that a modern designer needs to succeed in the design industry. 
+                Students learn not only the key skills in software, but also the basics 
+                of visual language: its grammar, tools, purposes and the ways 
+                in which it can be used. This means not only being fluent in 
+                Illustrator, Photoshop, and After Effects, but also understanding 
+                how visual language is read by other people and how it is 
+                used in business, politics, and our daily social life. 
+                The core courses also include photography and drawing. </p>
+                <br>
+            <p class="bold">Digital & Interaction Design specialization</p>
+            <p>Focused on graphics that can be viewed on a screen. 
+                The projects were mainly related to film and animation, but also 
+                UX and UI design of applications and websites. In addition to digital 
+                image and sound processing, I also created storyboards and my 
+                own movies. I used Adobe Premiere, After Effects and other software. 
+                I improved my digital photography skills.</p>
             </div>
-        </section>
-        <section>
-            <div class="section-title red"><h3>Courses</h3></div>
-            <a target="_blank" rel="noopener noreferrer external" href="./resources/codecademy.pdf"><div class="tiles light" id="frontEnd"><div><h3>Front End Engineer Career Path on Codecademy</h3><p>350 Hours to complete</p></div></div></a>
-        </section>
-    </div>
-    <section>
-        <div class="section-title"><h3>Story Time</h3></div>
-        <p>You might be wondering why I want to be a Front End Engineer? Answear is kinda simple, 
-            I'm good at learning and this area is evolving so freakin fast.. . 
-            By the way my current job is pretty boring. I would love to meet someone who will belive in me. 
-            I'm currently learning on codecademy and I have some experience with Graphic Design <br>
-            (3 years on WSE in Kraków in this field). I feel that I need more experience but I'm eager to learn as I mentioned before.</p>
-    </section>
-    <section>
-        <div class="section-title aquaDark"><h3>Contact</h3></div>
+            <section id="story" class="dark long shadow-center">
+                <h2>My Story</h2>
+                <p>I am aspiring to be the best front end developer ever. Currently learning by my own, from home after working hours, but I Hope to get a well paid job and to serve people with my skills, and improve them constantly</p>
+            </section>
+
+    <footer>
+        <h2>Contact</h2>
         <div class="grid3">
             <a href="mailto:dawiddebiecx@gmail.com"><div class="tiles aqua"><div><h3>E-mail</h3><p>dawiddebiecx@gmail.com</p></div></div></a>
-            <a href="https://www.linkedin.com/in/dawid-debiec/"><div class="tiles aqua"><h3>LinkedIn</h3></div></a>
-            <a href="https://github.com/Dawidx3p"><div class="tiles aqua"><h3>GitHub</h3></div></a>
+            <a target="_blank" rel="noopener noreferrer external" href="https://www.linkedin.com/in/dawid-debiec/"><div class="tiles aqua"><h3>LinkedIn</h3></div></a>
+            <a target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p"><div class="tiles aqua"><h3>GitHub</h3></div></a>
         </div>
-    </section>
+    </footer>
  </body>
 </html>
