--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </section>
             <section id="projects" class="small light shadow-left">
                 <h2>Projects</h2>
+                <a target="_blank" rel="noopener noreferrer external" href="https://planer-pracy.tk">Planer-pracy (React.js)</a>
                 <a target="_blank" rel="noopener noreferrer external" href="https://filmxteka.tk">Filmxteka (React.js)</a>
                 <a target="_blank" rel="noopener noreferrer external" href="https://spotthelist.tk">Spot The List (React.js)</a>
                 <a target="_blank" rel="noopener noreferrer external" href="https://flamboyant-goldberg-bbefb7.netlify.app">Chess Club Homepage (CSS/HTML)</a>
