--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <section id="projects" class="small light shadow-left">
                 <h2>Projects</h2>
                 <a target="_blank" rel="noopener noreferrer external" href="https://planer-pracy.tk">Planer-pracy (React.js)</a>
-                <a target="_blank" rel="noopener noreferrer external" href="https://filmxteka.tk">Filmxteka (React.js)</a>
+                <a target="_blank" rel="noopener noreferrer external" href="https://filmxteka.ml">Filmxteka (React.js)</a>
                 <a target="_blank" rel="noopener noreferrer external" href="https://spotthelist.tk">Spot The List (React.js)</a>
                 <a target="_blank" rel="noopener noreferrer external" href="https://flamboyant-goldberg-bbefb7.netlify.app">Chess Club Homepage (CSS/HTML)</a>
                 <a target="_blank" rel="noopener noreferrer external" href="https://orangehomepage.tk">Orange Homepage (CSS/HTML)</a>
