--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </section>
             <section id="projects" class="small light shadow-left">
                 <h2>Projects</h2>
-                <a target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/ONL_FSB_E_10_Redux_Warsztat">Warsztat Segregowanie, Wyszukiwanie, Ocena Filmów (React/Redux)</a>
+                <a target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/ONL_FSB_E_10_Redux_Warsztat">Workshop (React/Redux)</a>
                 <a target="_blank" rel="noopener noreferrer external" href="https://planer-pracy.tk">Planer-pracy (React.js)</a>
                 <a target="_blank" rel="noopener noreferrer external" href="https://filmxteka.ml">Filmxteka (React.js)</a>
                 <a target="_blank" rel="noopener noreferrer external" href="https://spotthelist.tk">Spot The List (React.js)</a>
