--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
         </div>
         <section class="light long shadow-right">
             <h2>Courses & Schools</h2>
-            <h3>Front End Engineer Career Path on Codecademy</h3>
+            <h3>Front End Engineer Career Path at Codecademy</h3>
             <p>350 hour course, 71 Projects, 121 Lessons</p>
+            <br>
+            <h3>JS, React, Redux for programmers at Coderslab</h3>
+            <p>I've had a great 130 hours of improving my React/Redux skills.
+                Learned a lot about the Ecosystem and how to manage it. 
+                I've also gained understanding of good coding practices.
+                Ready to use my knowledge on a daily basis</p>
             <br>
             <h3>Graphic Design & Multimedia</h3>
             <p>Undergraduate studies, that prepare for work in the broadly 
