--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </section>
             <section id="projects" class="small light shadow-left">
                 <h2>Projects</h2>
+                <a target="_blank" rel="noopener noreferrer external" href="https://joanneart.netlify.app">Blog</a>
                 <a target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/Warsztat_Coderslab">Workshop (React/Redux)</a>
                 <a target="_blank" rel="noopener noreferrer external" href="https://planer-pracy.tk">Planer-pracy (React.js)</a>
                 <a target="_blank" rel="noopener noreferrer external" href="https://filmxteka.ml">Filmxteka (React.js)</a>
@@ -30,14 +31,14 @@
         </div>
         <section class="light long shadow-right">
             <h2>Courses & Schools</h2>
-            <h3>Front End Engineer Career Path at Codecademy</h3>
-            <p>350 hour course, 71 Projects, 121 Lessons</p>
-            <br>
             <h3>JS, React, Redux for programmers at Coderslab</h3>
             <p>I've had a great 130 hours of improving my React/Redux skills.
                 Learned a lot about the Ecosystem and how to manage it. 
                 I've also gained understanding of good coding practices.
                 Ready to use my knowledge on a daily basis</p>
+            <br>
+            <h3>Front End Engineer Career Path at Codecademy</h3>
+            <p>350 hour course, 71 Projects, 121 Lessons</p>
             <br>
             <h3>Graphic Design & Multimedia</h3>
             <p>Undergraduate studies, that prepare for work in the broadly 
