--- a/index.html
+++ b/index.html
@@ -19,14 +19,36 @@
             </section>
             <section id="projects" class="small light shadow-left">
                 <h2>Projects</h2>
-                <a target="_blank" rel="noopener noreferrer external" href="https://joanneart.netlify.app">Blog (React, Netlify functions, FaundaDB)</a>
-                <a target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/Warsztat_Coderslab">Workshop (React/Redux)</a>
-                <a target="_blank" rel="noopener noreferrer external" href="https://planer-pracy.tk">Planer-pracy (React.js)</a>
-                <a target="_blank" rel="noopener noreferrer external" href="https://filmxteka.ml">Filmxteka (React.js)</a>
-                <a target="_blank" rel="noopener noreferrer external" href="https://spotthelist.tk">Spot The List (React.js)</a>
-                <a target="_blank" rel="noopener noreferrer external" href="https://flamboyant-goldberg-bbefb7.netlify.app">Chess Club Homepage (CSS/HTML)</a>
-                <a target="_blank" rel="noopener noreferrer external" href="https://orangehomepage.tk">Orange Homepage (CSS/HTML)</a>
-                <a target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p">More on Github</a>
+                <p>Filmxteka (React / Typescript / Netlify functions / FaundaDB)
+                    <a target="_blank" rel="noopener noreferrer external" href="https://filmxteka.ml">Preview</a> / 
+                    <a target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/filmxteka_v2.0">GitHub Link</a>
+                </p>
+                <p>Blog (React, Netlify functions, FaundaDB) 
+                    <a target="_blank" rel="noopener noreferrer external" href="https://joanneart.netlify.app">Preview</a> / 
+                    <a target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/joanna-blog">GitHub Link</a>
+                </p>
+                <p>Workshop (React/Redux) 
+                    <a target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/Warsztat_Coderslab">GitHub Link</a>
+                </p>
+                <p>Planer-pracy React/Redux
+                    <a target="_blank" rel="noopener noreferrer external" href="https://planer-pracy.tk">Preview</a> / 
+                    <a target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/It.focus">GitHub Link</a>
+                </p>
+                <p>Spot The List (React.js)
+                    <a target="_blank" rel="noopener noreferrer external" href="https://spotthelist.tk">Preview</a> / 
+                    <a target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/spotTheList">GitHub Link</a>
+                </p>
+                <p>Chess Club Homepage (CSS/HTML) 
+                    <a target="_blank" rel="noopener noreferrer external" href="https://flamboyant-goldberg-bbefb7.netlify.app">Preview</a>/ 
+                    <a target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/Responosive-Club-Website">GitHub Link</a>
+                </p>
+                <p>Orange Homepage (CSS/HTML)
+                    <a target="_blank" rel="noopener noreferrer external" href="https://orangehomepage.tk">Preview</a> / 
+                    <a target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p/Orange">GitHub Link</a>
+                </p>
+                <p>
+                    <a target="_blank" rel="noopener noreferrer external" href="https://github.com/Dawidx3p">My GitHub</a>
+                </p>
             </section>
         </div>
         <section class="light long shadow-right">
